--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,61 +12,91 @@
         }
     </style>
 </head>
+
 <body>
 
-<canvas id="gameCanvas" width="256" height="256"></canvas>
+    <canvas id="gameCanvas" width="256" height="256"></canvas>
 
-<script>
-    // Get a reference to the canvas and the rendering context
-    const canvas = document.getElementById('gameCanvas');
-    const context = canvas.getContext('2d');
+    <input type="text" name="tick" id="tick" value="">
 
-    // Define the desired frame rate
-    const fps = 30;
-    const frameDuration = 1000 / fps;
+    <button id="startButton">Start</button>
+    <button id="stopButton">Stop</button>
 
-    // Save the time of the last rendered frame
-    let lastFrameTime = 0;
 
-    // Define the grid size and cell size
-    const gridRows = 16;
-    const gridColumns = 16;
-    const cellSize = 16;
+    <script>
+        // Get a reference to the canvas and the rendering context
+        const canvas = document.getElementById('gameCanvas');
+        const context = canvas.getContext('2d');
 
-    // Define your update and render functions
-    function update() {
-        // Update the game state
-    }
+        // Define the desired frame rate
+        const fps = 30;
+        const frameDuration = 1000 / fps;
 
-    function render() {
-        // Clear the canvas
-        context.clearRect(0, 0, canvas.width, canvas.height);
-        
-        // Draw the grid
-        for (let row = 0; row < gridRows; row++) {
-            for (let col = 0; col < gridColumns; col++) {
-                const x = col * cellSize;
-                const y = row * cellSize;
-                context.strokeRect(x, y, cellSize, cellSize);
+        // Save the time of the last rendered frame
+        let lastFrameTime = 0;
+        let tick = 0;
+        let isRunning = false;  // The game is initially stopped
+
+
+        // Define the grid size and cell size
+        const gridRows = 16;
+        const gridColumns = 16;
+        const cellSize = 16;
+
+        // Define your update and render functions
+        function update() {
+            // Update the game state
+            tick++;
+
+            document.getElementById('tick').value = tick;
+        }
+
+        function render() {
+            // Clear the canvas
+            context.clearRect(0, 0, canvas.width, canvas.height);
+
+            // Draw the grid
+            for (let row = 0; row < gridRows; row++) {
+                for (let col = 0; col < gridColumns; col++) {
+                    const x = col * cellSize;
+                    const y = row * cellSize;
+                    context.strokeRect(x, y, cellSize, cellSize);
+                }
             }
         }
-    }
 
-    // Define the game loop function
-    function gameLoop(timestamp) {
-        const deltaTime = timestamp - lastFrameTime;
-        if (deltaTime >= frameDuration) {
-            lastFrameTime = timestamp;
-            update();
-            render();
+        // Define the game loop function
+        function gameLoop(timestamp) {
+            if (!isRunning) return;  // Exit the loop if the game is stopped
+
+            const deltaTime = timestamp - lastFrameTime;
+            if (deltaTime >= frameDuration) {
+                lastFrameTime = timestamp;
+                update();
+                render();
+            }
+            requestAnimationFrame(gameLoop);  // Request the next frame
         }
+
+        // Start the game loop
         requestAnimationFrame(gameLoop);
-    }
 
-    // Start the game loop
-    requestAnimationFrame(gameLoop);
+        document.getElementById('startButton').addEventListener('click', startGame);
+        document.getElementById('stopButton').addEventListener('click', stopGame);
 
-</script>
+        function startGame() {
+            if (!isRunning) {
+                isRunning = true;
+                requestAnimationFrame(gameLoop);  // Start the game loop
+            }
+        }
+
+        function stopGame() {
+            isRunning = false;
+        }
+
+    </script>
 
 </body>
+
 </html>
